2012-10-12  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Always set CURLOPT_CAINFO.

2012-10-12  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Worker.pm: Add data_path to %splitting_args.
	* perl/Amanda/Taper/Scribe.pm: Correctly set part_* for DIRECTTCP
	  data_path.

2012-10-11  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Add a timeout.
	* common-src/event.c: List all event in debug mode.
	* common-src/security-util.c: Call the accept_fn on connection close.

2012-10-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amcryptsimple.pl: Add '-z 0' to gpg argument when
	  encrypting.

2012-10-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amservice.c, device-src/ndmp-device.c,
	  server-src/dumper.c, xfer-src/xfer-test.c: Fix bug found by Coverity.

2012-10-10  Jean-Louis Martineau <martineau@zmanda.com>
	* */*.c: Fix bug found by Coverity.

2012-10-10  Jean-Louis Martineau <martineau@zmanda.com>
	* */*.c: Fix bug found by Coverity.

2012-10-09  Jean-Louis Martineau <martineau@zmanda.com>
	* oldrecover-src/amrecover.c: Solaris do not have sa_restorer.

2012-10-09  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c, amar-src/amarchiver.c,
	  client-src/selfcheck.c, common-src/bsd-security.c,
	  common-src/util.c, device-src/device.c,
	  device-src/ndmp-device.c, device-src/s3.c,
	  device-src/tape-device.c, oldrecover-src/amrecover.c,
	  recover-src/extract_list.c, recover-src/set_commands.c,
	  server-src/diskfile.c, server-src/driver.c,
	  server-src/planner.c: Fix bug found by Coverity.

2012-10-09  Jean-Louis Martineau <martineau@zmanda.com>
	* example/Makefile.am: Build amanda-CAStor.conf from
	  amanda-CAStor.conf.in
	* example/template.d/amanda-CAStor.conf: Remove
	* example/template.d/amanda-CAStor.conf.in: New file.

2012-10-05  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Change the security_stream_read callback