@@ -1,4 +1,7 @@
 2012-10-12  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amstatus.pl (showtime): Use calandar days.
+
+2012-10-12  Jean-Louis Martineau <martineau@zmanda.com>
 	* device-src/s3.c: Always set CURLOPT_CAINFO.
 
 2012-10-12  Jean-Louis Martineau <martineau@zmanda.com>
